--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.1",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
