--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.6.1",
     "ionicons": "^7.0.0",
+    "js-cookie": "^3.0.5",
     "vue": "^3.2.45",
     "vue-datepicker": "^1.3.0",
     "vue-router": "^4.1.6"
