--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "noEmit": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "allowJs": true,
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/router/index.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
